Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.15.3
-
Component/s: Build tools: qdoc
-
Labels:None
-
Platform/s:
-
Commits:f4861c9a5aba08b13ec77cc5a6c754a08311db02 (qt/qttools/dev) 05f23a21db806db7217eecd0c1e44d32225d5a7a (qt/qttools/6.0) 419a0d3e6760cc8318dff6e417281e945662c4ee (qt/qttools/6.1) 64651d862af266f0c39b60eec44e21aa52668f92 (qt/tqtc-qttools/tqtc/lts-5.15)
-
Sprint:Da Vinci sprint 30
Description
coredump output:
Using host libthread_db library "/usr/lib/libthread_db.so.1". Core was generated by `/usr/bin/qdoc -outputdir /home/zccrs/projects/qtbase/build/doc/qtcore -installd'. Program terminated with signal SIGSEGV, Segmentation fault. #0 0x00005560edee5e5a in QListData::size (this=0x18) at /usr/include/qt/QtCore/qlist.h:115 115 inline int size() const noexcept { return int(d->end - d->begin); } // q6sizetype (gdb) bt #0 0x00005560edee5e5a in QListData::size (this=0x18) at /usr/include/qt/QtCore/qlist.h:115 #1 0x00005560edee65b1 in QList<QString>::operator[] (this=0x18, i=0) at /usr/include/qt/QtCore/qlist.h:575 #2 0x00005560edee6083 in Atom::string (this=0x0) at /home/zccrs/projects/qttools/src/qdoc/atom.h:173 #3 0x00005560ee039bc7 in WebXMLGenerator::startLink (this=0x7ffdc8cc0530, writer=..., atom=0x0, node=0x5560eea13380, link=...) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:751 #4 0x00005560ee03a630 in WebXMLGenerator::generateAnnotatedList (this=0x7ffdc8cc0530, writer=..., relative=0x5560f46a33f0, nodeList=...) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:856 #5 0x00005560ee036eb1 in WebXMLGenerator::append (this=0x7ffdc8cc0530, writer=..., node=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:244 #6 0x00005560ee012af0 in QDocIndexFiles::generateIndexSection (this=0x5560f7d31d90, writer=..., node=0x5560f46a33f0, post=0x7ffdc8cc06d0) at /home/zccrs/projects/qttools/src/qdoc/qdocindexfiles.cpp:1314 #7 0x00005560ee0366bd in WebXMLGenerator::generateIndexSections (this=0x7ffdc8cc0530, writer=..., node=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:169 #8 0x00005560ee035eb1 in WebXMLGenerator::generatePageNode (this=0x7ffdc8cc0530, pn=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:111 #9 0x00005560ee0370c8 in WebXMLGenerator::generateDocumentation (this=0x7ffdc8cc0530, node=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:267 #10 0x00005560ee03722e in WebXMLGenerator::generateDocumentation (this=0x7ffdc8cc0530, node=0x5560f35b5a48) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:279 #11 0x00005560edf8b012 in Generator::generateDocs (this=0x7ffdc8cc0530) at /home/zccrs/projects/qttools/src/qdoc/generator.cpp:1669 #12 0x00005560edfab9f9 in HtmlGenerator::generateDocs (this=0x7ffdc8cc0530) at /home/zccrs/projects/qttools/src/qdoc/htmlgenerator.cpp:276 #13 0x00005560edfd9f10 in processQdocconfFile (fileName=...) at /home/zccrs/projects/qttools/src/qdoc/main.cpp:514 #14 0x00005560edfda6b2 in main (argc=28, argv=0x7ffdc8cc0808) at /home/zccrs/projects/qttools/src/qdoc/main.cpp:605 (gdb) f 3 #3 0x00005560ee039bc7 in WebXMLGenerator::startLink (this=0x7ffdc8cc0530, writer=..., atom=0x0, node=0x5560eea13380, link=...) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:751 751 if (!atom->string().isEmpty()) (gdb) bt #0 0x00005560edee5e5a in QListData::size (this=0x18) at /usr/include/qt/QtCore/qlist.h:115 #1 0x00005560edee65b1 in QList<QString>::operator[] (this=0x18, i=0) at /usr/include/qt/QtCore/qlist.h:575 #2 0x00005560edee6083 in Atom::string (this=0x0) at /home/zccrs/projects/qttools/src/qdoc/atom.h:173 #3 0x00005560ee039bc7 in WebXMLGenerator::startLink (this=0x7ffdc8cc0530, writer=..., atom=0x0, node=0x5560eea13380, link=...) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:751 #4 0x00005560ee03a630 in WebXMLGenerator::generateAnnotatedList (this=0x7ffdc8cc0530, writer=..., relative=0x5560f46a33f0, nodeList=...) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:856 #5 0x00005560ee036eb1 in WebXMLGenerator::append (this=0x7ffdc8cc0530, writer=..., node=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:244 #6 0x00005560ee012af0 in QDocIndexFiles::generateIndexSection (this=0x5560f7d31d90, writer=..., node=0x5560f46a33f0, post=0x7ffdc8cc06d0) at /home/zccrs/projects/qttools/src/qdoc/qdocindexfiles.cpp:1314 #7 0x00005560ee0366bd in WebXMLGenerator::generateIndexSections (this=0x7ffdc8cc0530, writer=..., node=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:169 #8 0x00005560ee035eb1 in WebXMLGenerator::generatePageNode (this=0x7ffdc8cc0530, pn=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:111 #9 0x00005560ee0370c8 in WebXMLGenerator::generateDocumentation (this=0x7ffdc8cc0530, node=0x5560f46a33f0) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:267 #10 0x00005560ee03722e in WebXMLGenerator::generateDocumentation (this=0x7ffdc8cc0530, node=0x5560f35b5a48) at /home/zccrs/projects/qttools/src/qdoc/webxmlgenerator.cpp:279 #11 0x00005560edf8b012 in Generator::generateDocs (this=0x7ffdc8cc0530) at /home/zccrs/projects/qttools/src/qdoc/generator.cpp:1669 #12 0x00005560edfab9f9 in HtmlGenerator::generateDocs (this=0x7ffdc8cc0530) at /home/zccrs/projects/qttools/src/qdoc/htmlgenerator.cpp:276 #13 0x00005560edfd9f10 in processQdocconfFile (fileName=...) at /home/zccrs/projects/qttools/src/qdoc/main.cpp:514 #14 0x00005560edfda6b2 in main (argc=28, argv=0x7ffdc8cc0808) at /home/zccrs/projects/qttools/src/qdoc/main.cpp:605 quit)