QDoc: Fix possible crash in WebXMLGenerator

In the at WebXMLGenerator::startLink, the "atom" argument
maybe is nullptr.

Fixes: QTBUG-91754
Change-Id: Ie97607ab9a1afc9f0df632b0448aa3294679180c
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit f4861c9a5aba08b13ec77cc5a6c754a08311db02)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>